<resources>
    <string name="app_name">قرار مغزها</string>
    <string name="en_digits">abcdefghijklmnopqrstuvwxyz1234567890</string>
    <string name="numbers">1234567980</string>
    <string name="lets_go">بزن بریم!</string>
    <string name="access_error">لطفا دوباره وارد حساب کاربری خود شوید!</string>
    <string name="general_error">خطا! لطفا دوباره امتحان کنید</string>
    <string name="general_send">با موفقیت ارسال شد</string>
    <string name="general_save">با موفقیت ثبت شد</string>
    <string name="general_internet_error">خطا! لطفا اتصال به اینترنت را بررسی کنید</string>
    <string name="general_number_error">خطا! لطفا شماره تلفن را بررسی کنید</string>
    <string name="general_name_error">خطا! لطفا نام و نام خانوادگی خود را بررسی کنید</string>
    <string name="general_name_form_error">خطا! لطفا نام و نام خانوادگی خود را بررسی کنید</string>
    <string name="general_email_form_error">خطا! لطفا ایمیل خود را بررسی کنید</string>
    <string name="general_bday_form_error">خطا! لطفا تاریخ تولد خود را بررسی کنید</string>
    <string name="general_sex_form_error">خطا! لطفا جنسیت خود را بررسی کنید</string>
    <string name="general_number">شماره تلفن همراه</string>
    <string name="general_invite">کد معرف</string>
    <string name="general_email">ایمیل</string>
    <string name="general_bday">تاریخ تولد</string>
    <string name="general_share">اشتراک از طریق</string>
    <string name="general_end">مدت زمان مسابقه به پایان رسید!</string>
    <string name="general_name">نام و نام خانوادگی</string>
    <string name="general_code">کد تایید</string>
    <string name="general_exit">برای خروج کلید بازگشت رو دوباره بفشارید</string>
    <string name="general_noquestions">سوالات شما تمام شده است!</string>
    <string name="general_noquestions_at_all">میزان سوالات شما به اتمام رسیده!</string>
    <string name="amount_model">%s تومان</string>
    <string name="discount_model">%s %</string>
    <string name="loginfragment_nouser">شماره وارد شده ثبت نشده لطفا ابتدا ثبت نام کنید</string>
    <string name="loginfragment_blocked">شماره وارد شده بلاک شده! لطفا با پشتیبانی تماس بگیرید</string>
    <string name="loginfragment_title">به قرار مغز ها خوش آمدید</string>
    <string name="loginfragment_text">لطفا برای ورود شماره تلفن همراه تان را وارد کنید تا
کد فعالسازی برای شما ارسال شود.</string>
    <string name="loginfragment_register">حساب کاربری ندارید؟  ثبت نام کنید!</string>
    <string name="loginfragment_verify">ارسال کد تایید</string>
    <string name="registerfragment_conflict">شماره وارد شده قبلا ثبت شده!</string>
    <string name="registerfragment_title">ثبت نام در قرار مغز ها</string>
    <string name="registerfragment_text">لطفا اطلاعات زیر را تکمیل نمایید تا کد
فعالسازی ثبت نام برای شما ارسال شود.</string>
    <string name="registerfragment_login">حساب کاربری دارید؟  وارد شوید!</string>
    <string name="registerfragment_rules">پذیرش قوانین و مقررات قرار مغزها</string>
    <string name="registerfragment_rules_error">در صورت عدم پذیرش قوانین و مقررات، امکان ثبت نام وجود ندارد</string>
    <string name="verify_wrong_code">کد وارد شده صحیح نیست!</string>
    <string name="verify_welcome">%s خوش آمدید</string>
    <string name="verify_title">کد تایید ارسال شد!</string>
    <string name="verify_text">لطفا کد دریافت شده از طریق پیامک را وارد کنید</string>
    <string name="verify_resend">ارسال مجدد کد تایید</string>
    <string name="verify_verify">ورود به حساب</string>
    <string name="time_error">ساعت/تاریخ دستگاه شما به روز نیست. لطفا تاریخ و ساعت دستگاه خود را تنظیم کنید.</string>
    <string name="time_set">تنظیم</string>
    <string name="internet_error">خطای دسترسی به اینترنت! لطفا اینترنت دیتا/وای فای خود را بررسی کنید</string>
    <string name="internet_retry">تلاش مجدد</string>
    <string name="getdata_text">در حال دریافت اطلاعات حساب کاربری شما…</string>
    <string name="profile_title">حساب من</string>
    <string name="profile_question_card">تعداد کل سوالات</string>
    <string name="profile_score_card">امتیاز من</string>
    <string name="profile_time_card">تا پایان مسابقه</string>
    <string name="profile_time_card_tostart">تا شروع مسابقه</string>
    <string name="profile_remaining_card">سوالات بدون پاسخ</string>
    <string name="profile_edit_title">ویرایش حساب</string>
    <string name="profile_edit_subtitle">ویرایش اطلاعات حساب</string>
    <string name="profile_stat_title">وضعیت من</string>
    <string name="profile_stat_subtitle">مشاهده آمار و اطلاعات</string>
    <string name="profile_scorehelper_title">امتیاز ها</string>
    <string name="profile_scorehelper_subtitle">مشاهده نحوه امتیاز گیری</string>
    <string name="profile_buy_title">خرید نیترو</string>
    <string name="profile_buy_subtitle">خرید نیترو</string>
    <string name="profile_code">کد کاربری: %s</string>
    <string name="profile_time">%s روز</string>
    <string name="profile_time_lastday">روز آخر</string>
    <string name="profile_time_end">تمام شد!</string>
    <string name="profile_avatar_change">انتخاب تصویر</string>
    <string name="profile_avatar_remove">حذف</string>
    <string name="profile_sex">جنسیت</string>
    <string name="profile_male">آقا</string>
    <string name="profile_female">خانم</string>
    <string name="profile_save">ثبت اطلاعات</string>
    <string name="profile_invite_notfound">کد معرف وارد شده معتبر نیست!</string>
    <string name="profile_invite_failed">خطا در ثبت کد معرف، لطفا دوباره امتحان کنید</string>
    <string name="start_title">شروع مسابقه</string>
    <string name="start_profile_title">حساب کاربری</string>
    <string name="start_profile_subtitle">مشاهده امتیازات کسب شده</string>
    <string name="start_start_title">شروع مسابقه</string>
    <string name="start_start_subtitle">پاسخ به سوالات باقیمانده</string>
    <string name="start_highscore_title">کاربران برتر</string>
    <string name="start_highscore_subtitle">مشاهده لیست کاربران برتر</string>
    <string name="start_info">شما دارای %s سوال بدون پاسخ هستید!</string>
    <string name="start_info_passed">زمان مسابقه به پایان رسیده!</string>
    <string name="start_info_notstarted">مسابقه شروع نشده!</string>
    <string name="camera_permission_title">استفاده از دوربین</string>
    <string name="camera_permission_message">برای گرفتن عکس از طریق دوربین به این مجوز نیاز است</string>
    <string name="camera_permission_positive">اجازه میدهم</string>
    <string name="camera_permission_negative">اجازه نمیدهم</string>
    <string name="camera_permission_deny">برای فعال سازی این مجوز به تنظیمات رجوع کنید</string>
    <string name="storage_permission_title">استفاده از گالری</string>
    <string name="storage_permission_message">برای نمایش عکس های گالری به این مجوز نیاز است</string>
    <string name="storage_permission_positive">اجازه میدهم</string>
    <string name="storage_permission_negative">اجازه نمیدهم</string>
    <string name="storage_permission_deny">برای فعال سازی این مجوز به تنظیمات رجوع کنید</string>
    <string name="instagrampicker_gallery">گالری</string>
    <string name="instagrampicker_gallery_title">انتخاب عکس</string>
    <string name="instagrampicker_camera">دوربین</string>
    <string name="instagrampicker_camera_title">گرفتن عکس</string>
    <string name="instagrampicker_multi_select_title">ویرایش عکس</string>
    <string name="instagrampicker_filter_title">فیلترها</string>
    <string name="crop_image_activity_title">کراپ</string>
    <string name="crop_image_menu_rotate_left">چرخواندن پادساعت گرد</string>
    <string name="crop_image_menu_rotate_right">چرخواندن</string>
    <string name="crop_image_menu_crop">بریدن</string>
    <string name="crop_image_menu_flip">آینه</string>
    <string name="crop_image_menu_flip_horizontally">آینه افقی</string>
    <string name="crop_image_menu_flip_vertically">آینه عمودی</string>
    <string name="pick_image_intent_chooser_title">منبع را انتخاب کنید</string>
    <string name="Next">بعدی</string>
    <string name="question_report">گزارش سوال</string>
    <string name="question_next">سوال بعدی</string>
    <string name="question_points">امتیاز سوال: %s</string>
    <string name="question_remaining">سوالات باقی مانده: %s</string>
    <string name="highscore_title">کاربران برتر</string>
    <string name="highscore_user_rank">نفر %sم</string>
    <string name="highscore_first_title">نفر اول</string>
    <string name="highscore_second_title">نفر دوم</string>
    <string name="highscore_third_title">نفر سوم</string>
    <string name="highscore_fourth_title">نفر چهارم</string>
    <string name="highscore_fifth_title">نفر پنجم</string>
    <string name="highscore_score">%d امتیاز</string>
    <string name="highscore_you">شما</string>
    <string name="message_incoming">پیام ها</string>
    <string name="message_outgoing">پشتیبانی</string>
    <string name="message_empty">شما هیچ پیامی در صندوق ورودی خود ندارید</string>
    <string name="message_back">بازگشت</string>
    <string name="newversion_dialog_title">نسخه جدید</string>
    <string name="newversion_dialog_show">دانلود</string>
    <string name="newversion_dialog_cancel">بستن</string>
    <string name="newversion_dialog_text">کاربر عزیز نسخه جدید قرار مغزها منتشر شده، لطفا با استفاده از گزینه های زیر برنامه خود را بروزرسانی کنید.</string>
    <string name="chat_text">متن مورد نظر</string>
    <string name="buy_title">خرید نیترو</string>
    <string name="buy_des">با خرید هریک از پکیج های زیر تعداد سوالات خریداری شده به حساب کاربری شما اضافه می شود</string>
    <string name="buy_one_count">500 \n سوال</string>
    <string name="buy_two_count">1000 \n سوال</string>
    <string name="buy_three_count">1500 \n سوال</string>
    <string name="buy_four_count">2000 \n سوال</string>
    <string name="buy_five_count">2500 \n سوال</string>
    <string name="buy_price">%s تومان</string>
    <string name="buy_plan_title">پکیج %s تایی سوال</string>
    <string name="buy_booster_title">افزایش %s برابری امتیاز سوال ها برای 200 سوال</string>
    <string name="buy_booster_title_invalid">تعداد استفاده شما به پایان رسیده</string>
    <string name="buy_booster_title_inuse">پکیج نیترو امتیاز برای شما فعال می باشد</string>
    <string name="buy_buy">خرید</string>
    <string name="nitro_title">افزایش %s برابری امتیاز سوال ها \n برای 200 سوال</string>
    <string name="nitro_price">قیمت: %s تومان</string>
    <string name="nitro_price2">نیترو فعال می باشد</string>
    <string name="nitro_price3">حداکثر نیترو استفاده شده!</string>
    <string name="nitro_price4">مسابقه شروع نشده!</string>
    <string name="nitro_price5">زمان مسابقه به پایان رسیده!</string>
    <string name="nitro_progress_title">تعداد نیترو های خریداری شده</string>
    <string name="buy_dialog_text">مبلغ قابل پرداخت:</string>
    <string name="buy_dialog_discount_text">مبلغ قابل پرداخت با %d درصد تخفیف:</string>
    <string name="buy_dialog_buy">پرداخت</string>
    <string name="buy_dialog_cancel">انصراف</string>
    <string name="buy_dialog_giftcode">کد تخفیف</string>
    <string name="buy_dialog_check">بررسی</string>
    <string name="buy_dialog_giftcode_btn">کد تخفیف دارم!</string>
    <string name="buy_dialog_giftcode_invalid">کد معرف وارد شده معتبر نیست</string>
    <string name="navigation_buyhistory">تاریخچه خرید</string>
    <string name="navigation_support">پشتیبانی</string>
    <string name="navigation_invite">معرفی به دوستان</string>
    <string name="navigation_setting">تنظیمات</string>
    <string name="navigation_help">راهنما</string>
    <string name="navigation_rule">قوانین و مقررات</string>
    <string name="navigation_about">درباره</string>
    <string name="navigation_instagram">اینستاگرام</string>
    <string name="navigation_exit">خروج از حساب کاربری</string>
    <string name="buyhistory_title">تاریخچه خرید</string>
    <string name="buyhistory_empty">تاکنون خریدی انجام نداده اید!</string>
    <string name="buyhistory_row_title">نوع پکیج: %s سوالی</string>
    <string name="buyhistory_row_title2">نوع پکیج: نیترو امتیاز</string>
    <string name="buyhistory_row_date">تاریخ: %s</string>
</resources>