<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/profile_title"
        android:id="@+id/menu_profile"
        android:icon="@drawable/user"/>
    <item
        android:title="@string/highscore_title"
        android:id="@+id/menu_highscore"
        android:icon="@drawable/success"/>
    <item
        android:title="@string/start_title"
        android:id="@+id/menu_start"
        android:icon="@drawable/questione"/>
    <item
        android:title="@string/buy_title"
        android:id="@+id/menu_buy"
        android:icon="@drawable/supermarket"/>
    <item
        android:title="@string/message_incoming"
        android:id="@+id/menu_message"
        android:icon="@drawable/comment"/>

</menu>