<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    android:clickable="true"
    android:focusable="true"
    tools:context=".fragments.ProfileEditFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/profile_guide50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <ImageView
        android:id="@+id/profile_avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_avatar_change"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/vazir"
        android:soundEffectsEnabled="true"
        android:text="@string/profile_avatar_change"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@+id/profile_avatar_remove"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_avatar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_avatar_remove"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/vazir"
        android:soundEffectsEnabled="true"
        android:text="@string/profile_avatar_remove"
        android:textColor="@color/black"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/profile_avatar_change"
        app:layout_constraintTop_toBottomOf="@id/profile_avatar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_number_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:enabled="false"
        android:gravity="center"
        android:hint="@string/general_number"
        app:layout_constraintRight_toRightOf="@id/profile_guide50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_avatar_change">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:fontFamily="@font/vazir"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="16dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:hint="@string/general_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/profile_guide50"
        app:layout_constraintTop_toBottomOf="@id/profile_avatar_change">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusedByDefault="true"
            android:fontFamily="@font/vazir"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:padding="16dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:gravity="center"
        android:hint="@string/general_email"
        app:layout_constraintRight_toRightOf="@id/profile_guide50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_number_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:padding="16dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_bday_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:hint="@string/general_bday"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/profile_guide50"
        app:layout_constraintTop_toBottomOf="@id/profile_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_bday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/vazir"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:padding="16dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/profile_bday_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:soundEffectsEnabled="true"
        app:layout_constraintBottom_toBottomOf="@id/profile_bday_layout"
        app:layout_constraintLeft_toLeftOf="@id/profile_bday_layout"
        app:layout_constraintRight_toRightOf="@id/profile_bday_layout"
        app:layout_constraintTop_toTopOf="@id/profile_bday_layout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_sex_layout"
        style="@style/TextAppearance.AppCompat.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/vazir"
        android:text="@string/profile_sex"
        app:layout_constraintRight_toRightOf="@id/profile_guide50"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/profile_invite_layout" />

    <CheckBox
        android:id="@+id/profile_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorPrimary"
        android:text="@string/profile_male"
        app:layout_constraintLeft_toRightOf="@id/profile_female"
        app:layout_constraintRight_toRightOf="@id/profile_guide50"
        app:layout_constraintTop_toBottomOf="@id/profile_sex_layout" />

    <CheckBox
        android:id="@+id/profile_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/colorPrimary"
        android:text="@string/profile_female"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/profile_male"
        app:layout_constraintTop_toBottomOf="@id/profile_sex_layout" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/profile_invite_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:hint="@string/general_invite"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/profile_guide50"
        app:layout_constraintTop_toBottomOf="@id/profile_bday_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_invite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/numbers"
            android:fontFamily="@font/vazir"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLength="11"
            android:padding="16dp"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/profile_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:fontFamily="@font/vazir"
        android:text="@string/profile_save"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_invite_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99FFFFFF"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminateTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>